<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    <TextView
        android:id="@+id/texMaintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
      	android:layout_centerHorizontal="true"
        android:text="@string/hello_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Accounts -->
     <TextView
      android:id="@+id/textViewAccounts"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/texMaintTitle"
      android:layout_marginTop="50dp"
      android:text="@string/viewAccounts"
      android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <Button
      android:id="@+id/buttonViewAccounts"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textViewAccounts"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:onClick="viewAccountList"
      android:text="@string/accounts" />
     
      <!-- Transaction history -->
     <TextView
      android:id="@+id/textViewTransactions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/buttonViewAccounts"
      android:layout_marginTop="30dp"
      android:text="@string/viewTransactions"
      android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <Button
      android:id="@+id/buttonViewTransactions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textViewTransactions"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:onClick="viewTransactionList"
      android:text="@string/transactions" />
     
      <!-- Profile -->
     <TextView
      android:id="@+id/textMyProfile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/buttonViewTransactions"
      android:layout_marginTop="30dp"
      android:text="@string/myProfile"
      android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <Button
      android:id="@+id/buttonMyProfile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textMyProfile"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:onClick="viewMyProfile"
      android:text="@string/profile" />

</RelativeLayout>