<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
      	android:layout_centerHorizontal="true"
        android:text="@string/title_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />
    
    <!-- Username -->
    <TextView
      android:id="@+id/textUsername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textTitle"
      android:layout_marginTop="50dp"
      android:text="@string/username"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editUsername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textUsername"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textUsername"
      android:ems="10" 
      android:inputType="text" >
      <requestFocus />
   </EditText>
   
   <!-- password -->
   <TextView
      android:id="@+id/textPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"      
      android:layout_below="@+id/textUsername"
      android:layout_marginTop="38dp"
      android:text="@string/password"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textPassword"
      android:layout_toRightOf="@+id/textPassword"
      android:layout_marginLeft="32dp"
      android:ems="10"
      android:inputType="textPassword" />
   
   <!-- Login button -->
   <Button
      android:id="@+id/buttonLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/editPassword"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="90dp"
      android:onClick="login"
      android:text="@string/login" />
   
   <!-- login attempts -->
   <TextView
      android:id="@+id/textTrackAttempt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textPassword"
      android:layout_below="@+id/editPassword"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="48dp"
      android:text="@string/attempts"
      android:textAppearance="?android:attr/textAppearanceMedium" />
   
    <TextView
      android:id="@+id/textAttempts"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="30dp"
      android:layout_toRightOf="@+id/textTrackAttempt"
      android:layout_alignTop="@+id/textTrackAttempt"
      android:text="" />

</RelativeLayout>